Fix product column alignment for twentytwelve and twentythirteen. Closes #22

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,6 +27,10 @@
   .edd-compare-products ul, .edd-compare-products li, .edd-compare-products div {
     border: initial;
     margin: 0; }
+  .edd-compare-products li {
+    margin: 0 !important; }
+  .edd-compare-products ul {
+    padding: 0 !important; }
   .edd-compare-products::after {
     /* never visible - this is used in jQuery to check the current Breakpoint */
     display: none;
